force-app/main/default/objects/Error_Message__e/Error_Message__e.object-meta.xml
<CustomObject>
    <description>Custom error message details.</description>
    <label>Error Message</label>
    <pluralLabel>Error Messages</pluralLabel>
</CustomObject>