force-app/main/default/objects/Error_Message__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Details of the error message to be logged.</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>